--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -127,7 +127,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge1.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Athula Ransirilal</h3>
+                        <h3 class="testmonial-title">Mr. Athula Ransirilal</h3>
 						<h6 class="testmonial-subtitle">Dubbing Competition</h6>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge2.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Pradeep Premalal</h3>
+                        <h3 class="testmonial-title">Mr. Pradeep Premalal</h3>
 						<h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
+                        <h3 class="testmonial-title">Mr. Harshaka Rathnakumara</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Saranga</h3>
+                        <h3 class="testmonial-title">Mr. Saranga</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
