--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -114,7 +114,7 @@
 	
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
-            <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
+            <h2 class="section-title mb-5">UPLOAD YOUR FILE</h2>
             <a href="https://forms.gle/xHQaaLTyXTBEJBPf7" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
@@ -127,7 +127,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge1.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
+                        <h3 class="testmonial-title">අතුල රන්සිරිලාල් මහතා</h3>
 						<h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge2.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
+                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල් මහතා</h3>
 						<h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
+                        <h3 class="testmonial-title">හර්ශක රත්නකුමාර මහතා</h3>
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
