--- a/comiccharactersin.html
+++ b/comiccharactersin.html
@@ -124,7 +124,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge1.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
+                        <h3 class="testmonial-title">අතුල රන්සිරිලාල් මහතා</h3>
 						<h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge2.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
+                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල් මහතා</h3>
 						<h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
+                        <h3 class="testmonial-title">හර්ශක රත්නකුමාර මහතා</h3>
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
