--- a/indexeng.html
+++ b/indexeng.html
@@ -256,7 +256,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge1.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Athula Ransirilal</h3>
+                        <h3 class="testmonial-title">Mr. Athula Ransirilal</h3>
 						<h6 class="testmonial-subtitle">Dubbing Competition</h6>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge2.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Pradeep Premalal</h3>
+                        <h3 class="testmonial-title">Mr. Pradeep Premalal</h3>
 						<h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
+                        <h3 class="testmonial-title">Mr. Harshaka Rathnakumara</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Saranga</h3>
+                        <h3 class="testmonial-title">Mr. Saranga</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
