--- a/indexsin.html
+++ b/indexsin.html
@@ -256,7 +256,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge1.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
+                        <h3 class="testmonial-title">අතුල රන්සිරිලාල් මහතා</h3>
 						<h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge2.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
+                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල් මහතා</h3>
 						<h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
+                        <h3 class="testmonial-title">හර්ශක රත්න කුමාර මහතා</h3>
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
