--- a/indexeng.html
+++ b/indexeng.html
@@ -65,7 +65,7 @@
     <!-- header -->
     <header id="home" class="header">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">“Let my country be awake”</h1>
+            <h1 class="display-2 font-weight-bold my-3">“Let My Country Be Awake”</h1>
             <h3 class="display-4 mb-5">The Students’ Festival of Literature</h3>
 			<h2 class="display-4 mb-5">2022</h2>
             <a class="btn btn-lg btn-primary" href="gallaryeng.html">View Our Gallery <i class="ti-location-arrow"></i></a>
@@ -227,7 +227,7 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" class="gallary-img">
+					<img src="assets/imgs/scocial-3.jpg" class="gallary-img">
 					<a href="#" class="gallary-overlay">
 						<i class="gallary-icon "></i>
 					</a>
