--- a/indexsin.html
+++ b/indexsin.html
@@ -82,7 +82,7 @@
                         <h3 class="mb-4" style="text-align:center">හැදින්වීම</h3>
                         <p style="text-align:justify"><b><i>"මාගේ දේශය අවදි කරනු මැන"</b></i> ශිෂ්‍ය සාහිත්‍ය උළෙලට සමගාමීව, පේරාදෙණිය විශ්ව විද්‍යාලීය ඉංජිනේරු පීඨය විසින්  <b><i>"රූසර ඩිජිටල් නිර්මාණ තරඟාවලිය"</b></i> දෙවන වරට සංවිධානය කරනු ලබයි. තරඟාවලිය <b><i>හඬ කැවීම්, ඡායාරූප සැකසීම්, ඩිජිටල් චරිත සිතුවම් නිර්මාණය</b></i> යන ප්‍රධාන තරඟ අංශ යටතේ පැවැත්වේ. </p>
                         <h3 class="mb-4" style="text-align:center">කාල සීමාව</h3>
-						<p><b>2022 ජූලි මස</b> සිට <b>2022 අගෝසතු මස</b> දක්වා </p>
+						<p><b>2022 ජූලි මස</b> සිට <b>2022 අගෝස්තු මස</b> දක්වා </p>
 						<h3 class="mb-4" style="text-align:center">අරමුණු</h3>
                         <p style="text-align:justify">
 						<li>ඩිජිටල් කලාව පිළිබද තාක්ෂණික හා සෞන්දර්යාත්මක දැනුම හා උන්නදුව වැඩිදියුණු කිරීම.</li>
@@ -120,7 +120,7 @@
                             <img src="assets/imgs/event1.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">හඬ කැවීමේ තරඟාවලිය </h4>
-                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත.</p>
+                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>අගෝස්තු මස 7</b> වන දින දක්වා විවෘතව ඇත.</p>
 								<h3 class="text-center mb-4"><a href="dubbingsin.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
@@ -130,7 +130,7 @@
                             <img src="assets/imgs/event2.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">ඡායාරූප සැකසීම් තරඟාවලිය</h4>
-                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9 </b>වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත. </p>
+                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9 </b>වන දින සිට <b>අගෝස්තු මස 7</b> වන දින දක්වා විවෘතව ඇත. </p>
 								<h3 class="text-center mb-4"><a href="photomanipulationsin.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
@@ -140,7 +140,7 @@
                             <img src="assets/imgs/event3.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟාවලිය</h4>
-                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත.</p>
+                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>අගෝස්තු මස 7</b> වන දින දක්වා විවෘතව ඇත.</p>
 								<h3 class="text-center mb-4"><a href="comiccharactersin.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
@@ -279,7 +279,7 @@
                     </div>
                 </div>
             </div>
-			<div class="col-md-4 my-3 my-md-0">
+			<!--<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
@@ -287,7 +287,7 @@
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
-			</div>
+			</div>-->
         </div>
     </div>
 
