--- a/indexeng.html
+++ b/indexeng.html
@@ -120,7 +120,7 @@
                             <img src="assets/imgs/event1.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">Dubbing Competition </h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
+                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>7th of August 2022</b>.</p>
 								<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
@@ -130,7 +130,7 @@
                             <img src="assets/imgs/event2.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">Photo Manipulation Competition</h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
+                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>7th of August 2022</b>.</p>
 								<h3 class="text-center mb-4"><a href="photomanipulationeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
@@ -140,7 +140,7 @@
                             <img src="assets/imgs/event3.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">Comic Character Creation Competition</h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
+                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>7th of August 2022</b>.</p>
 								<h3 class="text-center mb-4"><a href="comiccharactereng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
@@ -279,7 +279,7 @@
                     </div>
                 </div>
             </div>
-			<div class="col-md-4 my-3 my-md-0">
+			<!--<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
@@ -287,7 +287,7 @@
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 
