--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-			<div class="col-md-4 my-3 my-md-0">
+			<!--<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
@@ -158,7 +158,7 @@
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
-			</div>
+			</div>-->
         </div>
     </div>
     <!-- CONTACT Section  -->
