--- a/gallaryeng.html
+++ b/gallaryeng.html
@@ -65,7 +65,7 @@
     <!-- header -->
     <header id="home" class="header">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">“Let My Country Be Awake”</h1>
+            <h1 class="display-2 font-weight-bold my-3">“Let My Country Awake”</h1>
             <h3 class="display-4 mb-5">The Students’ Festival of Literature</h3>
 			<h2 class="display-4 mb-5">2022</h2>
             <a class="btn btn-lg btn-primary" href="#gallary">View Our Gallery <i class="ti-location-arrow"></i></a>
