--- a/photomanipulationeng.html
+++ b/photomanipulationeng.html
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-			<div class="col-md-4 my-3 my-md-0">
+			<!--<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
@@ -154,7 +154,7 @@
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
     <!-- CONTACT Section  -->
