--- a/indexeng.html
+++ b/indexeng.html
@@ -80,7 +80,7 @@
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
                         <h3 class="mb-4">INTRODUCTION</h3>
-                        <p><b><i>“රූසර-2022, The Digital Art Competition”</i></b> is organized for the second consecutive time as one of the events which is organized along with <i><b>“Let my country be awake”</i></b>, The Students’ Festival of Literature organized by the Literary Subcommittee of University of Peradeniya. This competition consists of three main categories which are Dubbing, Photo Manipulation, and Comic Character Creation.</p>
+                        <p><b><i>“රූසර-2022, The Digital Art Competition”</i></b> is organized for the second consecutive time as one of the events which is organized along with <i><b>“Let My Country Awake”</i></b>, The Students’ Festival of Literature organized by the Literary Subcommittee of University of Peradeniya. This competition consists of three main categories which are Dubbing, Photo Manipulation, and Comic Character Creation.</p>
                         <h3 class="mb-4">TIMELINE</h3>
 						<p>From <b>July 2022 </b> to <b>August 2022</b></p>
 						<h3 class="mb-4">OBJECTIVES</h3>
@@ -232,7 +232,7 @@
 						<i class="gallary-icon "></i>
 					</a>
 				</div>
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+				<!--<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
 					<img src="assets/imgs/scocial-1.jpg" class="gallary-img">
 					<a href="#" class="gallary-overlay">
 						<i class="gallary-icon "></i>
@@ -243,7 +243,7 @@
 					<a href="#" class="gallary-overlay">
 						<i class="gallary-icon "></i>
 					</a>
-				</div>
+				</div>-->
 			</div>
         </div>
     </div>
