--- a/indexsin.html
+++ b/indexsin.html
@@ -232,7 +232,7 @@
 						<i class="gallary-icon "></i>
 					</a>
 				</div>
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+				<!--<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
 					<img src="assets/imgs/scocial-1.jpg" class="gallary-img">
 					<a href="#" class="gallary-overlay">
 						<i class="gallary-icon "></i>
@@ -243,7 +243,7 @@
 					<a href="#" class="gallary-overlay">
 						<i class="gallary-icon "></i>
 					</a>
-				</div>
+				</div>-->
 			</div>
         </div>
     </div>
