--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -83,12 +83,13 @@
                         <p style="text-align:justify"><b>EVERYONE PARTICIPATING IN THE COMPETITION SHOULD READ AND UNDERSTAND ALL THE RULES OF THE COMPETITION.</p></b>
 						<p style="text-align:justify">
 						<li>Competitors must submit their design online on or before the due date.</li>
+						<li>Participants must only submit a video from videos given in our web page</li>
+						<li>The relevent videos for dubbing are given in the web page and participants can choose a video of their will from the given videos</li>
+						<li>The videos given can't be edited or cannot be altered in any way.</li>
 						<li>Only one design can be submitted per team.</li>
 						<li>Candidates can apply individually or in groups, with a maximum of five members per group.</li>
-						<li>Team members can play a video of their choice at will.</li>
 						<li>Political mudslinging should eliminate racist discourse. if such dialogue videos are included, they will be removed from the competition.</li>
-						<li>Do not use obscene words or videos. if such dialogue videos are included, they will be removed from the competition.</li>
-						<li>The duration of the video should be limited to three minutes. Videos longer than three minutes will be removed from the competition.</li>
+						<li>Do not use obscene words. if such dialogue videos are included, they will be removed from the competition.</li>
 						<li>Uploaded video size should be less than 500MB.</li>
 						<li>Videos should be presented in MP4 format. You can use any frame size except 1920*1080.</li>
 						<li>All submitted videos should not have any kind of logo, copyright marks, identifying marks, borders or any other type of markers.</li>
