--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -82,10 +82,13 @@
                         <h3 class="mb-4" style="text-align:center">තරඟ නීති  සහ රෙගුලාසි</h3>
                         <p style="text-align:justify"><b>තරඟයට සහබාගී වන සියළු තරඟකරුවන් තරඟ නීති රීති සියල්ල හොඳින් කියවා අවබෝධ කරගත යුතුය.</p></b>
 						<p style="text-align:justify">
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට පෙර මාර්ගගත ක්‍රමයට ලියාපදිංචි වියයුතුය.</li>
+						<li>තරඟකරුවන් තම නිර්මාණ නියමිත දිනට පෙර මාර්ගගත ක්‍රමයට ලියාපදිංචි වියයුතුය.</li>
+						<li>හඩ කැවීමේ තරඟකරුවන් අප වෙබ් පිටුවේ ඇති වීඩියෝ පඨයකට පමණක් හඩ කැවිය යුතුය.</li>
+						<li>විඩියෝ පඨයන් සංස්කරණය හෝ වෙනස්කම් වලට ලක් කිරීම නොකල යුතුය.</li>
+						<li>අදාල විඩියෝ පඨ අපගේ වෙබ් පිටුවෙන් තරඟකරුවන්ගේ අභිමතය පරිදි තෝරාගත හැක.</li>
 						<li>ළුක් කණ්ඩායමකට ඉදිරිපත් කළ හැකිවන්නෙ එක නිර්මාණයක් පමණි.</li>
 						<li>එක් කණ්ඩායමකට සහභාගි වියහැකි උපරිම සාමාජිකයන් ගණන 5 කි.</li>
-						<li>දේශපාලනික මඩගැසීම්, ජාතිවාදී දෙබස් නැති වියයුතුය. එවැනි දෙබස්, වීඩියෝ ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
+						<li>දේශපාලනික මඩගැසීම්, ජාතිවාදී දෙබස් නැති වියයුතුය. එවැනි දෙබස් ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
 						<li>අසභ්‍ය වචන ආදිය ඇතිළත් දෙබස් වීඩියෝ තුළ භාවිතා නොකළ යුතුය. එවැනි දෙබස් ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
 						<li>Upload කරනු ලබන වීඩියෝ පටය 500mb ට වඩා කුඩා වියයුතුය.</li>
 						<li>වීඩියෝ පටය mp4 ආකාරයෙන් ඉදිරිපත් කළයුතුය. 1920*1080 හැර කැමති frame size එකක් භාවිතා කළහැක.</li>
@@ -99,8 +102,7 @@
                                 &emsp;&emsp;වීඩියෝ පටයේ දෙබස් වල ගලායාම</br>
                                 &emsp;&emsp;වීඩියෝ පටයේ දෙබස් වල අර්ථවත් බව සහ සුසං‍යෝගය සලකා බලයි.</li> 
                         <li>අවසන් නිර්මාණ තනි zip/rar ගොනුවක් ලෙස උඩුගත කළයුතුය.</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය <a href="https://ruusara.github.io/ruusara/">https://ruusara.github.io/ruusara/</a> හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය.</li>
+						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය <a href="https://ruusara.github.io/ruusara/">https://ruusara.github.io/ruusara/</a> හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය.(පැය 24 ක් තුල ලියාපදිංචි අංකයක් නොලැබුනේනම් ඹබේ spam folder පරීක්ෂාකර බලන්න.)</li>
 						<li>zip ගොනුව ලියාපදිංචි අංකය නමින් නම්(Rename) වියයුතුය</li>
 						<li>වෙබ් අඩවියේ ඇති ගූගල් පෝරමය හරහා zip  ගොනුව පමණක් උඩුගත කළයුතුය.</li>
 						</p>
