--- a/photomanipulationsin.html
+++ b/photomanipulationsin.html
@@ -99,7 +99,7 @@
 						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය. එහිදී විද්‍යුත් තැපෑල හරහා දැනුම් දෙනු ඇත.</li>
 						<li>zip ගොනුව ලියාපදිංචි අංකය නමින් නම්(Rename) වියයුතුය.</li>
 						<li>වෙබ් අඩවියේ ඇති ගූගල් පෝරමය හරහා zip ගොනුව පමණක් උඩුගත කළයුතුය.</li>
-						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය <a href="https://ruusara.github.io/ruusara/">https://ruusara.github.io/ruusara/</a> හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය.</li>
+						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය <a href="https://ruusara.github.io/ruusara/">https://ruusara.github.io/ruusara/</a> හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය.(පැය 24 ක් තුල ලියාපදිංචි අංකයක් නොලැබුනේනම් ඹබේ spam folder පරීක්ෂාකර බලන්න.)</li>
 						</p>
                     </div>
                 </div>
