--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -97,7 +97,7 @@
 						<li>The most creative design is chosen by the jury and the most popular design is selected by Facebook likes.</li>
 						<li>The final decision will be made by the jury.</li>
 						<li>All the above files should be uploaded as a single zip (.rar) file, clearly stating your design as a single file as JPEG or PNG, and a short description of the design (character name and description of the character)</li> as a PDF.
-						<li>You must register and obtain a registration number through our website. <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> before uploading. There you will be notified via e-mail.</li>
+						<li>You must register and obtain a registration number through our website. <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> before uploading. There you will be notified via e-mail.(Please check your spam folder if you haven't received your registration number within 24 hours.)</li>
 
 						</p>
                     </div>
