--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -102,7 +102,7 @@
 							&emsp;&emsp;Flow in video and dialogues.</br>
 							&emsp;&emsp;The meaning and harmony of the dialogues in the video will be considered.</li>
 						<li>Final design should be uploaded as single zip (.rar) file.</li>
-						<li>Before uploading you need to register through our website <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> and get a registration number. There you will be notified via e-mail.</li>
+						<li>Before uploading you need to register through our website <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> and get a registration number. There you will be notified via e-mail.(Please check your spam folder if you haven't received your registration number within 24 hours.)</li>
 						<li>The zip file should be re-registered with the registration number.</li>
 						<li>Only this file should be uploaded through the Google forum provided on the website. </li> 
 
