--- a/photomanipulationeng.html
+++ b/photomanipulationeng.html
@@ -99,7 +99,7 @@
 						<li>Decision of the judges will be the last decision.</li>
 						<li>Before uploading the design, contestant should register using the official website and obtain registration number information may be provided through the e-mail.</li>
 						<li>The archive (.zip) file should be renamed with the registration number.</li>
-						<li>You must register and obtain a registration number through our website. <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> before uploading. There you will be notified via e-mail.</li>
+						<li>You must register and obtain a registration number through our website. <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> before uploading. There you will be notified via e-mail.(Please check your spam folder if you haven't received your registration number within 24 hours.)</li>
 
 						</p>
                     </div>
