--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -85,7 +85,7 @@
 						<li>තරඟකරුවන් තම නිර්මාණ නියමිත දිනට පෙර මාර්ගගත ක්‍රමයට ලියාපදිංචි වියයුතුය.</li>
 						<li>හඩ කැවීමේ තරඟකරුවන් අප වෙබ් පිටුවේ ඇති වීඩියෝ පඨයකට පමණක් හඩ කැවිය යුතුය.</li>
 						<li>විඩියෝ පඨයන් සංස්කරණය හෝ වෙනස්කම් වලට ලක් කිරීම නොකල යුතුය.</li>
-						<li>අදාල විඩියෝ පඨ අපගේ වෙබ් පිටුවෙන් තරඟකරුවන්ගේ අභිමතය පරිදි තෝරාගත හැක.</li>
+						<li><b>අදාල විඩියෝ පඨ අපගේ වෙබ් පිටුවෙන් තරඟකරුවන්ගේ අභිමතය පරිදි 2022/07/20 දින සිට ලබාගත හැක.</b></li>
 						<li>ළුක් කණ්ඩායමකට ඉදිරිපත් කළ හැකිවන්නෙ එක නිර්මාණයක් පමණි.</li>
 						<li>එක් කණ්ඩායමකට සහභාගි වියහැකි උපරිම සාමාජිකයන් ගණන 5 කි.</li>
 						<li>දේශපාලනික මඩගැසීම්, ජාතිවාදී දෙබස් නැති වියයුතුය. එවැනි දෙබස් ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
