--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -119,6 +119,18 @@
             <a href="https://forms.gle/xHQaaLTyXTBEJBPf7" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
+
+	  <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
+        <h2 class="section-title">Videos for Dubbing</h2>
+    </div>
+	
+	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
+         Videos will available after 20/07/2022
+         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+         </button>
+      </div>
+
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
     <!-- REVIEWS Section  -->
     <div id="testmonial" class="container-fluid wow fadeIn bg-dark text-light has-height-lg middle-items">
