--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -124,7 +124,7 @@
     </div>
 	
 	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
-         Videos will available after 20/07/2022
+         Videos will be available from the 20th July
          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
          </button>
