--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -112,7 +112,9 @@
             </div>
         </div>
     </div>
-	
+
+
+<!-- Comment start-->	
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAD YOUR FILE</h2>
@@ -130,6 +132,88 @@
             <span aria-hidden="true">&times;</span>
          </button>
       </div>
+<!-- comment end-->
+
+<!-- uncomment start
+	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
+        <h2 class="section-title py-5">VIDEOS FOR DUBBING</h2>
+        <div class="row justify-content-center">
+            <div class="col-sm-7 col-md-4 mb-5">
+                <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
+                    <!--
+					<li class="nav-item">
+                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Foods</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">Juices</a>
+                    </li> ----------------------------comment>
+                </ul>
+            </div>
+        </div>
+		<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="social">
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="foods" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <video controls>
+							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Dubbing Video 1</h4>
+								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <video controls>
+							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Dubbing Video 2</h4>
+								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <video controls>
+							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Dubbing Video 3</h4>
+								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+							</div>
+                        </div>
+                    </div>
+					<div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <video controls>
+							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Dubbing Video 4</h4>
+								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+							</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div
+uncomment end-->
+
+
 
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
     <!-- REVIEWS Section  -->
