--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -85,7 +85,7 @@
 						<li>තරඟකරුවන් තම නිර්මාණ නියමිත දිනට පෙර මාර්ගගත ක්‍රමයට ලියාපදිංචි වියයුතුය.</li>
 						<li>හඩ කැවීමේ තරඟකරුවන් අප වෙබ් පිටුවේ ඇති වීඩියෝ පඨයකට පමණක් හඩ කැවිය යුතුය.</li>
 						<li>විඩියෝ පඨයන් සංස්කරණය හෝ වෙනස්කම් වලට ලක් කිරීම නොකල යුතුය.</li>
-						<li><b>අදාල විඩියෝ පඨ අපගේ වෙබ් පිටුවෙන් තරඟකරුවන්ගේ අභිමතය පරිදි 2022/07/20 දින සිට ලබාගත හැක.</b></li>
+						<li><b>දෙවන සදහා අදාල ඡායාරූප අපගේ වෙබ් පිටුවේ ඉතා ඉක්මනින් පළවනු ඇත.</b></li>
 						<li>ළුක් කණ්ඩායමකට ඉදිරිපත් කළ හැකිවන්නෙ එක නිර්මාණයක් පමණි.</li>
 						<li>එක් කණ්ඩායමකට සහභාගි වියහැකි උපරිම සාමාජිකයන් ගණන 5 කි.</li>
 						<li>දේශපාලනික මඩගැසීම්, ජාතිවාදී දෙබස් නැති වියයුතුය. එවැනි දෙබස් ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
@@ -122,11 +122,11 @@
 
 <!-- comment start -->
   <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">Videos for Dubbing</h2>
+        <h2 class="section-title">MILESTONE - 01</h2>
     </div>
 	
 	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
-         Videos will be available from the 20th July
+         Videos will be available soon.
          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
          </button>
@@ -135,82 +135,180 @@
 
 
 <!-- uncomment start
-	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
-        <h2 class="section-title py-5">VIDEOS FOR DUBBING</h2>
+	<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
+        <h2 class="section-title py-5">MILESTONE - 01</h2>
         <div class="row justify-content-center">
             <div class="col-sm-7 col-md-4 mb-5">
                 <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
-                    <!--
-					<li class="nav-item">
-                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Foods</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#epi8" role="tab" aria-controls="pills-home" aria-selected="true">Episode 08</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">Juices</a>
-                    </li> ----------------------------comment>
+                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#epi29" role="tab" aria-controls="pills-profile" aria-selected="false">Episode 29</a>
+                    </li>
+					<li class="nav-item">
+                        <a class="nav-link" id="pills-profile2-tab" data-toggle="pill" href="#epi32" role="tab" aria-controls="pills-profile2" aria-selected="false">Episode 32</a>
+                    </li>
+					<li class="nav-item">
+                        <a class="nav-link" id="pills-profile3-tab" data-toggle="pill" href="#epi49" role="tab" aria-controls="pills-profile2" aria-selected="false">Episode 49</a>
+                    </li>
                 </ul>
             </div>
         </div>
-		<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="social">
         <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="foods" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="tab-pane fade show active" id="epi8" role="tabpanel" aria-labelledby="pills-home-tab">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card bg-transparent border my-3 my-md-0">
                             <video controls>
-							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
+							<source src = 'assets\vedio\Epi 08 With Voice.mp4' type='video/mp4'>
 								Your Browser does not support the video tag.
 							</video>
                             <div class="card-body">
-                                <h4 class="pt20 pb20">Dubbing Video 1</h4>
-								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
-								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+                                <h4 class="pt20 pb20">Epi 08 With Voice</h4>
+								<a href='assets\vedio\Epi 08 With Voice.mp4' download='Epi 08 With Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
 							</div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card bg-transparent border my-3 my-md-0">
                             <video controls>
-							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
+							<source src = 'assets\vedio\Epi 08 With out  Voice.mp4' type='video/mp4'>
 								Your Browser does not support the video tag.
 							</video>
                             <div class="card-body">
-                                <h4 class="pt20 pb20">Dubbing Video 2</h4>
-								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
-								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
-							</div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <video controls>
-							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
-								Your Browser does not support the video tag.
-							</video>
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">Dubbing Video 3</h4>
-								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
-								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+                                <h4 class="pt20 pb20">Epi 08 Without  Voice</h4>
+								<a href='assets\vedio\Epi 08 With out  Voice.mp4' download='Epi 08 With out  Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
 							</div>
                         </div>
                     </div>
 					<div class="col-md-4">
                         <div class="card bg-transparent border my-3 my-md-0">
-                            <video controls>
-							<source src = 'assets\vedio\dubbing1.mp4' type='video/mp4'>
-								Your Browser does not support the video tag.
-							</video>
+                            <img src="assets/imgs/dubscript1.png" class="rounded-0 card-img-top mg-responsive" style="padding:0.5em 0.5em 0 0.5em">
                             <div class="card-body">
-                                <h4 class="pt20 pb20">Dubbing Video 4</h4>
-								<a href='assets\vedio\dubbing1.mp4' download='Dubbing_1'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
-								<!--<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>--comment>
+                                <h4 class="pt20 pb20">Script</h4>
+								<a href='assets\හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts).pdf' download='හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts)'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
 							</div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+            <div class="tab-pane fade" id="epi29" role="tabpanel" aria-labelledby="pills-profile-tab">
+                <div class="row">
+                    <div class="col-md-4 my-3 my-md-0">
+                        <div class="card bg-transparent border">
+                            <video controls>
+							<source src = 'assets\vedio\Epi 29 With Voice.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Epi 29 With Voice</h4>
+								<a href='assets\vedio\Epi 29 With Voice.mp4' download='Epi 29 With Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-3 my-md-0">
+                        <div class="card bg-transparent border">
+                            <video controls>
+							<source src = 'assets\vedio\Epi 29 With out  Voice.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Epi 29 Without  Voice</h4>
+								<a href='assets\vedio\Epi 29 With out  Voice.mp4' download='Epi 29 With out  Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+					<div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <img src="assets/imgs/dubscript2.png" class="rounded-0 card-img-top mg-responsive" style="padding:0.5em 0.5em 0 0.5em">
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Script</h4>
+								<a href='assets\හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts).pdf' download='හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts)'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+			
+			<div class="tab-pane fade" id="epi32" role="tabpanel" aria-labelledby="pills-profile2-tab">
+                <div class="row">
+                    <div class="col-md-4 my-3 my-md-0">
+                        <div class="card bg-transparent border">
+                            <video controls>
+							<source src = 'assets\vedio\Epi 32  With Voice.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Epi 32  With Voice</h4>
+								<a href='assets\vedio\Epi 32  With Voice.mp4' download='Epi 32  With Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-3 my-md-0">
+                        <div class="card bg-transparent border">
+                            <video controls>
+							<source src = 'assets\vedio\Epi 32  With out  Voice.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Epi 32  Without  Voice</h4>
+								<a href='assets\vedio\Epi 32  With out  Voice.mp4' download='Epi 32  With out  Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+					<div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <img src="assets/imgs/dubscript3.png" class="rounded-0 card-img-top mg-responsive" style="padding:0.5em 0.5em 0 0.5em">
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Script</h4>
+								<a href='assets\හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts).pdf' download='හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts)'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+			
+			<div class="tab-pane fade" id="epi49" role="tabpanel" aria-labelledby="pills-profile2-tab">
+                <div class="row">
+                    <div class="col-md-4 my-3 my-md-0">
+                        <div class="card bg-transparent border">
+                            <video controls>
+							<source src = 'assets\vedio\Epi 49 With Voice.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Epi 49 With Voice</h4>
+								<a href='assets\vedio\Epi 49 With Voice.mp4' download='Epi 49 With Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-3 my-md-0">
+                        <div class="card bg-transparent border">
+                            <video controls>
+							<source src = 'assets\vedio\Epi 49 With out Voice.mp4' type='video/mp4'>
+								Your Browser does not support the video tag.
+							</video>
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Epi 49 Without Voice</h4>
+								<a href='assets\vedio\Epi 49 With out Voice.mp4' download='Epi 49 With out Voice'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+					<div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <img src="assets/imgs/dubscript4.png" class="rounded-0 card-img-top mg-responsive" style="padding:0.5em 0.5em 0 0.5em">
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Script</h4>
+								<a href='assets\හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts).pdf' download='හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts)'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+							</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+			
         </div>
-    </div
+    </div>
 uncomment end-->
 
 
